syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/yachnytskyi/golang-mongo-grpc/pb";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    enum role {
      user = 0;
      admin = 1;
    }
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
  }
  
message GenericResponse {
    string status = 1;
    string message = 2;
}